@@ -1,0 +1,9 @@
+package models.enums;
+
+public enum Ranks {
+    CONSTABLE,
+    SERGEANT,
+    ASPIRANT,
+    COMMISSIONER,
+    INSPECTOR,
+}
