@@ -1,7 +1,0 @@
-package models.exceptions;
-
-public class IllegalRegistrationNumber extends Exception {
-    public IllegalRegistrationNumber(String message) {
-        super(message);
-    }
-}
