@@ -1,0 +1,7 @@
+package models.exceptions;
+
+public class IllegalRegistrationNumberException extends Exception {
+    public IllegalRegistrationNumberException(String message) {
+        super(message);
+    }
+}
